--- a/fourier_1d.ipynb
+++ b/fourier_1d.ipynb
@@ -72,14 +72,19 @@
     "        '''\n",
     "        FFT -> Linear Transform -> Inverse FFT\n",
     "        '''\n",
-    "        self.in_channels = in_channels\n",
-    "        self.out_channels = out_channels\n",
-    "        self.modes = modes\n",
+    "        self.in_channels = in_channels ## Test: 1 then 64\n",
+    "        self.out_channels = out_channels ## Test: 64 then 1\n",
+    "        self.modes = modes ## Question: What does this do? \n",
     "        ## Set (random) weights for the linear transform\n",
     "        weights = torch.Tensor(in_channels, out_channels, modes) \n",
     "        self.weights = nn.Parameter(weights) ## Question: Should you scale the weights? \n",
     "\n",
-    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "    def forward(self, a: torch.Tensor) -> torch.Tensor:\n",
+    "        '''\n",
+    "        '''\n",
+    "        ## FFT\n",
+    "        a_rfft = torch.fft.rfft(a)\n",
+    "\n",
     "        \n",
     "        \n"
    ]
