Fourier Network Operator 1D complete!

--- a/fourier_1d.ipynb
+++ b/fourier_1d.ipynb
@@ -24,23 +24,33 @@
    ],
    "source": [
     "## Imports \n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import scipy.io\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import matplotlib.pyplot as plt \n",
+    "# import numpy as np \n",
+    "# import scipy.io \n",
+    "import torch \n",
+    "import torch.nn as nn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x2561b7e77d0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Set seeds\n",
     "torch.manual_seed(0)\n",
-    "np.random.seed(0)"
+    "# np.random.seed(0)"
    ]
   },
   {
@@ -61,50 +71,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device.\n"
+     ]
+    }
+   ],
    "source": [
-    "## Fourier Integral Operator 1D\n",
-    "class FourierIntegralOperator1D(nn.Module):\n",
-    "    def __init__(self, in_channels: int, out_channels: int, modes: int):\n",
-    "        super(FourierIntegralOperator1D, self).__init__()\n",
-    "        '''\n",
-    "        FFT -> Linear Transform -> Inverse FFT\n",
-    "        '''\n",
-    "        self.in_channels = in_channels ## Test: 1 then 64\n",
-    "        self.out_channels = out_channels ## Test: 64 then 1\n",
-    "        self.modes = modes ## Question: What does this do? \n",
-    "        ## Set (random) weights for the linear transform\n",
-    "        weights = torch.Tensor(in_channels, out_channels, modes) \n",
-    "        self.weights = nn.Parameter(weights) ## Question: Should you scale the weights? \n",
-    "\n",
-    "    def forward(self, a: torch.Tensor) -> torch.Tensor:\n",
-    "        '''\n",
-    "        '''\n",
-    "        ## FFT\n",
-    "        a_rfft = torch.fft.rfft(a)\n",
-    "\n",
-    "        \n",
-    "        \n"
+    "## Get Device for Training\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "print(f'Using {device} device.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Fourier Network Operator\n",
+    "## Fourier Integral Kernel 1D\n",
+    "class FourierIntegralKernel1D(nn.Module):\n",
+    "    def __init__(self, in_channels: int, out_channels: int, modes: int):\n",
+    "        super(FourierIntegralKernel1D, self).__init__()\n",
+    "        '''\n",
+    "        '''\n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = out_channels \n",
+    "        self.modes = modes \n",
+    "        ## Set (random) weights for the linear transform\n",
+    "        weights = torch.rand(self.modes, self.in_channels, self.out_channels, dtype=torch.cfloat) \n",
+    "        self.weights = nn.Parameter(weights) ## Optional: Scale weights\n",
+    "\n",
+    "    def forward(self, v: torch.Tensor) -> torch.Tensor:\n",
+    "        '''\n",
+    "        FFT -> Linear Transform -> Inverse FFT\n",
+    "        '''\n",
+    "        ## FFT\n",
+    "        v_rfft = torch.fft.rfft(v) \n",
+    "\n",
+    "        ## Linear Transform \n",
+    "        lv_rfft = torch.zeros(v_rfft.shape, dtype=torch.cfloat)\n",
+    "        lv_rfft[:, :self.modes] = torch.einsum('koi, ki -> ko', self.weights, v_rfft[:, :self.modes].permute(1, 0)).permute(1, 0) ## TODO: Check this\n",
+    "\n",
+    "        ## Inverse FFT\n",
+    "        v2 = torch.fft.irfft(lv_rfft, n=v.shape[-1])\n",
+    "        return v2\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Fourier Network Operator 1D\n",
     "class FourierNetworkOperator1D(nn.Module):\n",
-    "    def __init__(self, modes: int, width: int):\n",
+    "    def __init__(self, da: int, du: int, modes: int):\n",
     "        super(FourierNetworkOperator1D, self).__init__()\n",
     "        '''\n",
     "        '''\n",
     "        self.modes = modes\n",
-    "        self.width = width\n",
     "\n",
-    "        \n"
+    "        ## P: Lifts the lower dimensional function to higher dimensional space\n",
+    "        self.P = nn.Conv1d(da, 16, 1) ## TODO: Change da\n",
+    "\n",
+    "        ## K: Fourier integral kernel operator\n",
+    "        self.k0 = FourierIntegralKernel1D(16, 16, self.modes)\n",
+    "        self.k1 = FourierIntegralKernel1D(16, 16, self.modes)\n",
+    "        self.k2 = FourierIntegralKernel1D(16, 16, self.modes)\n",
+    "        self.k3 = FourierIntegralKernel1D(16, 16, self.modes)\n",
+    "\n",
+    "        ## W: Pointwise linear operator\n",
+    "        self.w0 = nn.Conv1d(16, 16, 1)\n",
+    "        self.w1 = nn.Conv1d(16, 16, 1)\n",
+    "        self.w2 = nn.Conv1d(16, 16, 1)\n",
+    "        self.w3 = nn.Conv1d(16, 16, 1)\n",
+    "\n",
+    "        ## Q: Projects the higher dimensional function to lower dimensional space\n",
+    "        self.Q = nn.Conv1d(16, du, 1) ## TODO: Change du\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        '''\n",
+    "        '''\n",
+    "        ## P\n",
+    "        x = self.P(x)\n",
+    "\n",
+    "        ## Fourier Layer #0\n",
+    "        ## K\n",
+    "        x1 = self.k0(x)\n",
+    "        ## W\n",
+    "        x2 = self.w0(x)\n",
+    "        ## Sum\n",
+    "        x = x1 + x2\n",
+    "        ## Gelu\n",
+    "        x = nn.functional.gelu(x)\n",
+    "\n",
+    "        ## Fourier Layer #1\n",
+    "        ## K\n",
+    "        x1 = self.k1(x)\n",
+    "        ## W\n",
+    "        x2 = self.w1(x)\n",
+    "        ## Sum \n",
+    "        x = x1 + x2\n",
+    "        ## Gelu\n",
+    "        x = nn.functional.gelu(x)\n",
+    "\n",
+    "        ## Fourier Layer #2\n",
+    "        ## K\n",
+    "        x1 = self.k2(x)\n",
+    "        ## W\n",
+    "        x2 = self.w2(x)\n",
+    "        ## Sum\n",
+    "        x = x1 + x2\n",
+    "        ## Gelu\n",
+    "        x = nn.functional.gelu(x)\n",
+    "\n",
+    "        ## Fourier Layer #3\n",
+    "        ## K\n",
+    "        x1 = self.k3(x)\n",
+    "        ## W\n",
+    "        x2 = self.w3(x)\n",
+    "        ## Sum\n",
+    "        x = x1 + x2\n",
+    "        ## Gelu\n",
+    "        x = nn.functional.gelu(x)\n",
+    "        \n",
+    "        ## Q\n",
+    "        x = self.Q(x)\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[395.7504, 395.7633, 395.7769, 395.7920, 395.8087]],\n",
+       "       grad_fn=<SqueezeBackward1>)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = FourierNetworkOperator1D(2, 1, 1)\n",
+    "x = torch.tensor([[1, 2, 3, 4, 5],[0.1, 0.11, 0.12, 0.13, 0.14]])\n",
+    "model(x)"
    ]
   },
   {
