Fourier Integral Kernel width..

--- a/fourier_1d.ipynb
+++ b/fourier_1d.ipynb
@@ -136,16 +136,17 @@
     "        super(FourierNetworkOperator1D, self).__init__()\n",
     "        '''\n",
     "        '''\n",
+    "        self.width = 16\n",
     "        self.modes = modes\n",
     "\n",
     "        ## P: Lifts the lower dimensional function to higher dimensional space\n",
     "        self.P = nn.Conv1d(da, 16, 1) ## TODO: Change da\n",
     "\n",
     "        ## K: Fourier integral kernel operator\n",
-    "        self.k0 = FourierIntegralKernel1D(16, 16, self.modes)\n",
-    "        self.k1 = FourierIntegralKernel1D(16, 16, self.modes)\n",
-    "        self.k2 = FourierIntegralKernel1D(16, 16, self.modes)\n",
-    "        self.k3 = FourierIntegralKernel1D(16, 16, self.modes)\n",
+    "        self.k0 = FourierIntegralKernel1D(self.width, self.width, self.modes)\n",
+    "        self.k1 = FourierIntegralKernel1D(self.width, self.width, self.modes)\n",
+    "        self.k2 = FourierIntegralKernel1D(self.width, self.width, self.modes)\n",
+    "        self.k3 = FourierIntegralKernel1D(self.width, self.width, self.modes)\n",
     "\n",
     "        ## W: Pointwise linear operator\n",
     "        self.w0 = nn.Conv1d(16, 16, 1)\n",
