--- a/fourier_1d.ipynb
+++ b/fourier_1d.ipynb
@@ -62,6 +62,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -71,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,24 +224,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.1116, -0.9307,  1.7852,  0.5458,  1.8071],\n",
+      "        [ 1.6296,  1.0109,  0.0180,  0.4402, -0.1038]])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "tensor([[41.1984, 41.2072, 41.2151, 41.2230, 41.2307]],\n",
+       "tensor([[-0.1247, -0.1247, -0.1247, -0.1247, -0.1247]],\n",
        "       grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = FourierNetworkOperator1D(2, 1, 1)\n",
-    "x = torch.tensor([[1, 2, 3, 4, 5],[0.1, 0.11, 0.12, 0.13, 0.14]])\n",
+    "x = torch.randn(2, 5)\n",
+    "print(x)\n",
     "model(x)"
    ]
   },
@@ -240,12 +263,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
